k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullcycle-api-service
  labels:
    app: fullcycle-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: fullcycle-api
